--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.15.4",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-image-picker-editor": "^1.3.2",
+    "react-modal": "^3.16.1",
     "react-native": "^0.73.2",
     "react-native-image-picker": "^7.1.0",
     "react-responsive-masonry": "^2.1.7",
