--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@mui/icons-material": "^5.15.4",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
+    "bootstrap-select": "^1.13.18",
+    "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.2",
+    "react-bootstrap": "^2.9.0-beta.1",
+    "react-bootstrap-select": "^0.14.0",
     "react-dom": "^18.2.0",
+    "react-grid-gallery": "^1.0.1-alpha.0",
     "react-icons": "^5.0.1",
     "react-image-picker-editor": "^1.3.2",
     "react-modal": "^3.16.1",
     "react-native": "^0.73.2",
     "react-native-image-picker": "^7.1.0",
+    "react-number-format": "^5.3.1",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.21.2",
     "sweetalert2": "^11.10.3"
